<resources>
    <!-- App Name -->
    <string name="app_name">Recipe Saver</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="ranking_title">Best Recipe of the Week</string>

    <!-- Placeholders for SeekBar Values -->
    <string name="time_needed_placeholder">%1$d mins</string>
    <string name="servings_placeholder">%1$d servings</string>
    <string name="default_time_value">0 mins</string>
    <string name="default_servings_value">1 serving</string>

    <!-- Labels -->
    <string name="add_photo">Add Photo</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="time_needed">Time Needed</string>
    <string name="servings">Servings</string>
    <string name="difficulty">Difficulty</string>
    <string name="instructions">Instructions</string>
    <string name="save">SAVE</string>
    <string name="collection_title">My Recipes</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="zero">0</string>
    <string name="ingredients">Ingredients</string>

    <!-- Content Description for Recipe Image -->
    <string name="recipe_image">Recipe Image</string>

    <!-- Arrays -->
    <string-array name="cuisine_array">
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Indian</item>
        <item>Western</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
