<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <Button
        android:id="@+id/reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        android:text="@string/reset_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6">
    </Button>

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@+id/reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.6">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>